--- a/index.html
+++ b/index.html
@@ -7,3 +7,32 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
+
+<body>
+   
+
+    <header>
+        <nav class="navbar">
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="contact.html">Contact Us</a>
+        </nav>
+    </header>
+
+    <main class="home-container">
+        <section class="welcome">
+            <h1>Welcome to Our Online Store</h1>
+            <p>Discover the best deals on electronics, fashion, and more!</p>
+        </section>
+        <section class="home-images"><br><br><br><br>
+            <img src="image/images.jpg" alt="Product 1" style="width: auto; height: 200px;">
+            <img src="image/images2.jpg" alt="Product 2"style="width: auto; height: 200px;">
+            <img src="image/iPhone.jpg" alt="Product 3"style="width: auto; height: 200px;">
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Online Store. All rights reserved.</p>
+    </footer>
+</body>
+</html>
